fixed build script

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && mv build ../public",
+    "buildInternal": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
